'Atualizado estilos css e adicionado tipo  dos pokemons'

--- a/templates/pokemons.html
+++ b/templates/pokemons.html
@@ -84,10 +84,10 @@ https://templatemo.com/tm-579-cyborg-gaming
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[1]['imagem']}} alt="">
-                      <h4>{{dados[1]['nome']}}<br><span>Sandbox</span></h4>
+                      <h4>{{dados[1]['nome']}}<br><span>{{dados[1]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
@@ -96,10 +96,10 @@ https://templatemo.com/tm-579-cyborg-gaming
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[2]['imagem']}} alt="">
-                      <h4>{{dados[2]['nome']}}<br><span>Sandbox</span></h4>
+                      <h4>{{dados[2]['nome']}}<br><span>{{dados[2]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
@@ -107,20 +107,20 @@ https://templatemo.com/tm-579-cyborg-gaming
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[3]['imagem']}} alt="">
-                      <h4>{{dados[3]['nome']}}<br><span>Steam-X</span></h4>
+                      <h4>{{dados[3]['nome']}}<br><span>{{dados[3]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[4]['imagem']}} alt="">
-                      <h4>{{dados[4]['nome']}}<br><span>Legendary</span></h4>
+                      <h4>{{dados[4]['nome']}}<br><span>{{dados[4]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
@@ -128,20 +128,20 @@ https://templatemo.com/tm-579-cyborg-gaming
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[5]['imagem']}} alt="">
-                      <h4>{{dados[5]['nome']}}<br><span>Max 3D</span></h4>
+                      <h4>{{dados[5]['nome']}}<br><span>{{dados[5]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
                       <img src={{dados[6]['imagem']}} alt="">
-                      <h4>{{dados[6]['nome']}}<br><span>Legend</span></h4>
+                      <h4>{{dados[6]['nome']}}<br><span>{{dados[6]['tipo']}}</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i> </li>
+                        <li><i class="fa fa-download"></i> </li>
                       </ul>
                     </div>
                   </div>
