--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -14,6 +14,7 @@ figure, header, nav, section, article, aside, footer, figcaption {
   padding: 0;
   border: 0;
   outline: 0;
+  box-sizing: border-box;
 }
 
 .clearfix:after {
