--- a/templates/Start.html
+++ b/templates/Start.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="produto">
-                    <input type="radio" name="city" id="sino" value='2'>
+                    <input type="radio" name="city" id="sino" value='3'>
                     <label for="sino">   -Sinnoh
 
                     <img class="city" src="static/img/sinnoh.png">
@@ -63,7 +63,7 @@
         </div>
 
         <div class="produto">
-                    <input type="radio"  name="city" id="unova" value='3'>
+                    <input type="radio"  name="city" id="unova" value='4'>
                     <label for="unova">   -Unova
 
                     <img class="city" src="static/img/unova.png">
@@ -71,7 +71,7 @@
 <!--                    <img src="static/img/kanto.jpg" style="width:20%;">-->
         </div>
         <div class="produto">
-                    <input type="radio" name="city" id="kalos" value='4'>
+                    <input type="radio" name="city" id="kalos" value='5'>
                     <label for="kalos">   -Kalos
 
                     <img class="city" src="static/img/killoh.png">
@@ -79,7 +79,7 @@
 <!--                    <img src="static/img/kanto.jpg" style="width:20%;">-->
         </div>
         <div class="produto">
-                    <input type="radio" name="city" id="alola" value='5'>
+                    <input type="radio" name="city" id="alola" value='6'>
                     <label for="alola">   -Alola
 
                     <img class="city" src="static/img/alola.png">
@@ -87,7 +87,7 @@
 <!--                    <img src="static/img/kanto.jpg" style="width:20%;">-->
         </div>
         <div class="produto">
-                    <input type="radio" name="city" id="galar value='6'>
+                    <input type="radio" name="city" id="galar" value='7'>
                     <label for=galar">   -Galar
 
                     <img class="city" src="static/img/galar.png">
