--- a/templates/pokemonchoice.html
+++ b/templates/pokemonchoice.html
@@ -28,8 +28,8 @@
 
 
         <div class="produto text-center">
-                    <input type="radio" name="city" id="kanto" value="0">
-                    <label for="kanto">   -Kanto
+                    <input type="radio" name="pokemon" id="kanto" value={{names[0]}}>
+                    <label for="kanto">   -{{names[0]}}
 
                     <img class="city" src={{ imgs[0] }}>
                     </label>
@@ -37,8 +37,8 @@
         </div>
 
         <div class="produto">
-                    <input type="radio" name="city" id="johto">
-                    <label for="johto">   -Johto
+                    <input type="radio" name="pokemon" id="johto" value={{names[1]}}>
+                    <label for="johto">   -{{names[1]}}
 
                     <img class="city" src={{ imgs[1] }}>
                     </label>
@@ -46,8 +46,8 @@
         </div>
 
         <div class="produto">
-                    <input type="radio" name="city" id="hoen">
-                    <label for="hoen">   -Hoenn
+                    <input type="radio" name="pokemon" id="hoen" value={{names[2]}}>
+                    <label for="hoen">   {{names[2]}}
                     <img class="city" src={{ imgs[2] }}>
                     </label>
 <!--                    <img src="static/img/kanto.jpg" style="width:20%;">-->
