--- a/templates/pokemons.html
+++ b/templates/pokemons.html
@@ -137,8 +137,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[6]['imagem']}} alt="">
-                      <h4>{{dados[6]['nome']}}<br><span>{{dados[6]['tipo']}}</span></h4>
+                      <img src={{pokemon_user['img']}} alt="">
+                      <h4>{{pokemon_user['nome']}}<br><span>{{dados[6]['tipo']}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
