'Adicionado rota de login e realizado alterações no bancdo de dados para preparar a funcionalidade de usuarios .. '

--- a/templates/Start.html
+++ b/templates/Start.html
@@ -23,7 +23,7 @@
 
  <div class="header">
     <h1>Por qual destas cidades voce inciou sua jornada ? </h1>
-   <form method="post">
+   <form method="post" >
     <div class="embalagem">
 
 
@@ -88,7 +88,7 @@
         </div>
         <div class="produto">
                     <input type="radio" name="city" id="galar" value='7'>
-                    <label for=galar">   -Galar
+                    <label for="galar">   -Galar
 
                     <img class="city" src="static/img/galar.png">
                     </label>
