--- a/static/css/main.css
+++ b/static/css/main.css
@@ -390,12 +390,15 @@ input.input100 {
 }
 
 .has-val {
-  height: 48px !important;
+
+  font-seize: 0.5px;
+  opacity: 0;
 }
 
 .has-val + .focus-input100 + .label-input100 {
   top: 14px;
-  font-size: 13px;
+  opacity: 0;
+
 }
 
 /*==================================================================
@@ -420,7 +423,7 @@ input.input100 {
 .label-checkbox100::before {
   content: "\f00c";
   font-family: FontAwesome;
-  font-size: 13px;
+  font-size: 1px;
   color: transparent;
 
   display: -webkit-box;
@@ -438,11 +441,12 @@ input.input100 {
   border: 1px solid #6675df;
   left: 0;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-150%);
+  -moz-transform: translateY(-150%);
+  -ms-transform: translateY(-150%);
+  -o-transform: translateY(-150%);
+  transform: translateY(-150%);
+  opacity: 0;
 }
 
 .input-checkbox100:checked + .label-checkbox100::before {
