--- a/templates/pokemons.html
+++ b/templates/pokemons.html
@@ -83,8 +83,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="row">
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[1]['imagem']}} alt="">
-                      <h4>{{dados[1]['nome']}}<br><span>{{dados[1]['tipo']}}</span></h4>
+                      <img src= {{imgs[0]}} alt="">
+                      <h4>{{nomes[0]}}<br><span>{{tipos[0]}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
@@ -95,8 +95,8 @@ https://templatemo.com/tm-579-cyborg-gaming
 
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[2]['imagem']}} alt="">
-                      <h4>{{dados[2]['nome']}}<br><span>{{dados[2]['tipo']}}</span></h4>
+                      <img src={{imgs[1]}} alt="">
+                      <h4>{{nomes[1]}}<br><span>{{tipos[1]}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
@@ -106,8 +106,8 @@ https://templatemo.com/tm-579-cyborg-gaming
 
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[3]['imagem']}} alt="">
-                      <h4>{{dados[3]['nome']}}<br><span>{{dados[3]['tipo']}}</span></h4>
+                      <img src={{imgs[2]}} alt="">
+                      <h4>{{nomes[2]}}<br><span>{{tipos[2]}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
@@ -116,8 +116,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[4]['imagem']}} alt="">
-                      <h4>{{dados[4]['nome']}}<br><span>{{dados[4]['tipo']}}</span></h4>
+                      <img src={{imgs[3]}} alt="">
+                      <h4>{{nomes[3]}}<br><span>{{tipos[3]}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
@@ -127,8 +127,8 @@ https://templatemo.com/tm-579-cyborg-gaming
 
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{dados[5]['imagem']}} alt="">
-                      <h4>{{dados[5]['nome']}}<br><span>{{dados[5]['tipo']}}</span></h4>
+                      <img src={{imgs[4]}} alt="">
+                      <h4>{{nomes[4]}}<br><span>{{tipos[4]}}</span></h4>1
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
@@ -137,8 +137,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-4 col-sm-6">
                     <div class="item">
-                      <img src={{pokemon_user['img']}} alt="">
-                      <h4>{{pokemon_user['nome']}}<br><span>{{dados[6]['tipo']}}</span></h4>
+                      <img src={{imgs[5]}} alt="">
+                      <h4>{{nomes[5]}}<br><span>{{tipos[5]}}</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> </li>
                         <li><i class="fa fa-download"></i> </li>
