--- a/templates/pokemons.html
+++ b/templates/pokemons.html
@@ -6,16 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--    BOOTSTRAP-->
+ <!--    BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=
     Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+
     <title>Cyborg - Awesome HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
@@ -35,7 +36,25 @@ https://templatemo.com/tm-579-cyborg-gaming
 
 <body>
 
-  <!
+
+    <div class="collapse show" id="navbarToggleExternalContent" style="">
+      <div class="bg-warning p-4">
+        <h5 class="text-black h4">{{user}} </h5>
+        <span class="text-muted"></span>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-warning">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="true" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div>
+
+          <a class="text-black h5" href="{{url_for('logout')}}">Logout</a>
+
+        </div>
+      </div>
+    </nav>
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
@@ -78,7 +97,7 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Esses serão os seus pokemons iniciais</em> </h4>
+                  <h4><em>{{user}}, esses serão os seus pokemons iniciais</em> </h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-4 col-sm-6">
@@ -196,7 +215,7 @@ https://templatemo.com/tm-579-cyborg-gaming
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
