Alterado estilos css das paginas

--- a/static/css/city.css
+++ b/static/css/city.css
@@ -24,3 +24,33 @@
     margin-bottom:10px;
 
 }
+
+@media screen and (min-width:950px) {
+
+
+    .embalagem{
+        transform: translate(-50%,-36%);
+       grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+
+    }
+
+    .botao{
+
+        position:absolute;
+        top:113%;
+        margin-bottom:10px;
+    }
+
+    .pe{
+        height:20px;
+        width:50%;
+        color:#8DC1F1;
+        position:absolute;
+        top:135%;
+        margin-bottom:10px;
+    }
+
+
+
+}
