--- a/static/css/main.css
+++ b/static/css/main.css
@@ -302,11 +302,11 @@ iframe {
 
   
   position: absolute;
-  pointer-events: none;
+
   width: 100%;
   padding-left: 24px;
   left: 0;
-  top: 30px;
+
 
   
 }
@@ -332,31 +332,7 @@ input.input100 {
 
 /*---------------------------------------------*/
 
-.focus-input100 {
-  position: absolute;
-  display: block;
-  width: calc(100% + 2px);
-  height: calc(100% + 2px);
-  top: -1px;
-  left: -1px;
-  pointer-events: none;
-  border: 1px solid #6675df;
-  border-radius: 10px;
 
-  visibility: hidden;
-  opacity: 0;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-
-  -webkit-transform: scaleX(1.1) scaleY(1.3);
-  -moz-transform: scaleX(1.1) scaleY(1.3);
-  -ms-transform: scaleX(1.1) scaleY(1.3);
-  -o-transform: scaleX(1.1) scaleY(1.3);
-  transform: scaleX(1.1) scaleY(1.3);
-}
 
 .input100:focus + .focus-input100 {
   visibility: visible;
@@ -380,33 +356,11 @@ input.input100 {
   transform: scale(1);
 }
 
-.input100:focus {
-  height: 48px;
-}
 
-.input100:focus + .focus-input100 + .label-input100 {
-  top: 14px;
-  font-size: 13px;
-}
-
-.has-val {
-
-  font-seize: 0.5px;
-  opacity: 0;
-}
-
-.has-val + .focus-input100 + .label-input100 {
-  top: 14px;
-  opacity: 0;
-
-}
 
 /*==================================================================
 [ Restyle Checkbox ]*/
 
-.input-checkbox100 {
-  display: none;
-}
 
 .label-checkbox100 {
   font-family: Poppins-Regular;
@@ -420,52 +374,9 @@ input.input100 {
   cursor: pointer;
 }
 
-.label-checkbox100::before {
-  content: "\f00c";
-  font-family: FontAwesome;
-  font-size: 1px;
-  color: transparent;
-
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  border-radius: 2px;
-  background: #fff;
-  border: 1px solid #6675df;
-  left: 0;
-  top: 50%;
-  -webkit-transform: translateY(-150%);
-  -moz-transform: translateY(-150%);
-  -ms-transform: translateY(-150%);
-  -o-transform: translateY(-150%);
-  transform: translateY(-150%);
-  opacity: 0;
-}
-
-.input-checkbox100:checked + .label-checkbox100::before {
-  color: #6675df;
-}
 
 
-/*------------------------------------------------------------------
-[ Button ]*/
-.container-login100-form-btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+
 
 .login100-form-btn {
   display: -webkit-box;
@@ -500,6 +411,16 @@ input.input100 {
 
 
 
+
+.logo {
+
+    margin-left: 13%;
+
+}
+
+
+
+
 /*------------------------------------------------------------------
 [ Responsive ]*/
 
@@ -523,6 +444,12 @@ input.input100 {
   .login100-more {
     display: none;
   }
+
+  .pklogo{
+
+    margin-left:14%;
+
+  }
 }
 
 @media (max-width: 576px) {
@@ -531,6 +458,23 @@ input.input100 {
     padding-right: 15px;
     padding-top: 70px;
   }
+
+  .pklogo{
+
+    margin-left:1%;
+
+  }
+}
+
+@media screen and (max-width: 380px){
+
+
+    .pklogo{
+    margin-right:5%;
+    width:57%;
+    height:57%;
+    }
+
 }
 
 
@@ -541,55 +485,7 @@ input.input100 {
   position: relative;
 }
 
-.alert-validate::before {
-  content: attr(data-validate);
-  position: absolute;
-  z-index: 100;
-  max-width: 70%;
-  background-color: #fff;
-  border: 1px solid #c80000;
-  border-radius: 2px;
-  padding: 4px 25px 4px 10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 12px;
-  pointer-events: none;
-
-  font-family: Poppins-Regular;
-  color: #c80000;
-  font-size: 13px;
-  line-height: 1.4;
-  text-align: left;
-
-  visibility: hidden;
-  opacity: 0;
-
-  -webkit-transition: opacity 0.4s;
-  -o-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
-  transition: opacity 0.4s;
-}
-
-.alert-validate::after {
-  content: "\f12a";
-  font-family: FontAwesome;
-  display: block;
-  position: absolute;
-  z-index: 110;
-  color: #c80000;
-  font-size: 16px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 18px;
-}
+.
 
 .alert-validate:hover:before {
   visibility: visible;
@@ -619,3 +515,5 @@ input.input100 {
   background: #333333;
   color: #fff;
 }
+
+
