--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
 			<div class="wrap-login100">
 
 				<form class="login100-form validate-form" method="post">
-					<span class="logo"><img src="/static/img/header.png"></span>
+					<span class="logo"><img class="pklogo" src="/static/img/header.png"></span>
 					<span class="login100-form-title p-b-43">
 						{{dados}}
 						Login
